-Show more info in some file viewers (.sna, .p, .o, etc)
-Added copy and delete entire folder

Improved File Browser: added file size information
Improved cocoa (Mac) driver: allows distinguish between left and right Ctrl key, and left and right Alt key

Improved CPC emulation: 
-Video scanlines rendering
-Joystick emulation
-Stereo emulation

Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)

Improved menu interface:
-Added action to minimize all windows
-Added setting to ignore mouse click to open the menu
-Added more utf-8 characters support
-Added setting to show files in hexa+ascii using file viewer

Improved ZX-Uno emulation:
-Updated BIOS, Flash and ESXDOS (ESXDOS now runs 0.8.6 final version)
-Fixed bugs on mmc and flash storage layer which prevented to update bios, esxdos rom or entire flash from the BIOS
-Fixed chloe mmu mapping: bootm has priority. If bootm=1, can't map chloe. If bootm=0, can be chloe or +2a
-Added command line setting --zxuno-initial-64k to allow loading a initial 64kb block in bootm mode, bypassing the normal boot rom

Improved TBBlue emulation:
-Added debug window to enable/disable individual sprites
-Added relative sprite type composite/unified on sprite navigator
-Added Sprites Debug memory zone
-Optimize sprite rendering (saving 1% cpu on my computer)

Improved Speccy online browser: now uses ZXinfo API V3
Improved Hex Editor: Now it can be put on background

Improved all-to-pixel text rendering: 
-Allow 1:1 scale
-Allow to set window size and offsets in characters

Fixed annoying flickering in menu using XWindows video driver
Fixed loading General Sound rom
Fixed segfaults on fileselector +3 DSK screen previews using Speedlock protected disks or bad disks
Fixed pixel color on text all-to-pixel text rendering (color inversion)
Fixed downloads from spectrumcomputing