@@ -25567,15 +25567,6 @@ void menu_debug_reset(MENU_ITEM_PARAMETERS)
 }
 
 
-/*void menu_debug_prism_usr0(MENU_ITEM_PARAMETERS)
-{
-	if (menu_confirm_yesno("Set PC=0?")==1) {
-		reg_pc=0;
-		menu_generic_message("Prism Set PC=0","OK. Set PC=0");
-		salir_todos_menus=1;
-	}
-}
-*/
 
 
 void menu_debug_prism_failsafe(MENU_ITEM_PARAMETERS)
@@ -27088,22 +27079,21 @@ void menu_debug_settings(MENU_ITEM_PARAMETERS)
                 menu_add_item_menu_inicial(&array_menu_debug_settings,"~~Reset",MENU_OPCION_NORMAL,menu_debug_reset,NULL);
 		menu_add_item_menu_shortcut(array_menu_debug_settings,'r');
 
-        //Agregar una acción de solo hacer PC=0 en casos en que hay divide en modo mapram y no queremos
+        //Agregar una acción de solo hacer PC=0 en casos, por ejemplo, en que hay divide en modo mapram y no queremos
         //que se reinicialice toda la maquina y perder ese mapeo
         //Dejamos que la acción siempre esté visible
-        menu_add_item_menu(array_menu_debug_settings,"Set PC=0",MENU_OPCION_NORMAL,menu_debug_set_pc_zero,NULL);
-        menu_add_item_menu_tooltip(array_menu_debug_settings,"It only resets cpu by setting PC register to zero");
-        menu_add_item_menu_ayuda(array_menu_debug_settings,"It only resets cpu by setting PC register to zero.\n"
-            "Useful for example using DivIDE firmwares in MAPRAM mode and you need to restart it but without "
-            "losing the mapping");                    
+        if (CPU_IS_Z80) {
+            menu_add_item_menu(array_menu_debug_settings,"Set PC=0",MENU_OPCION_NORMAL,menu_debug_set_pc_zero,NULL);
+            menu_add_item_menu_tooltip(array_menu_debug_settings,"It only resets cpu by setting PC register to zero");
+            menu_add_item_menu_ayuda(array_menu_debug_settings,"It only resets cpu by setting PC register to zero.\n"
+                "Useful for example using DivIDE firmwares in MAPRAM mode and you need to restart it but without "
+                "losing the mapping");                    
+        }
                 
 
 		if (MACHINE_IS_PRISM) {
 			//Reset to failsafe
 			menu_add_item_menu(array_menu_debug_settings,"Reset to Failsafe mode",MENU_OPCION_NORMAL,menu_debug_prism_failsafe,NULL);
-
-			//Para Testeo. usr0
-			//menu_add_item_menu(array_menu_debug_settings,"Set PC=0",MENU_OPCION_NORMAL,menu_debug_prism_usr0,NULL);
 
 		}
 
