@@ -29,6 +29,9 @@ Improved CPC emulation:
 -Joystick emulation
 -Stereo emulation
 
+Improved Debug CPU Window:
+-Tell when a condition is satisfied or not
+
 Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
 Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)
 
